2005-12-03 Perry
 PATCH: [ 1335128 ] Ignore uninstalled codepages
  Src: MergeDoc.cpp MergeDoc.h codepage.cpp codepage_detect.cpp
  Src/Common: unicoder.cpp

2005-12-02 Kimmo
 PATCH: [ 1358408 ] Import and export for options
  Increase buffer size
  Src/Common: OptionsMgr.cpp

2005-12-02 Perry
 PATCH: [ 1369660 ] Delete unused variables m_msgUpdateStatus
  Cosmetic cleanup
  Src: DirDoc.cpp DiffContext.cpp DiffContext.h DiffThread.cpp
   DiffThread.h

2005-11-30 Perry
 PATCH: [ 1369657 ] Delete unused variable DiffFuncStruct::msgStatusUpdate
  Src: DiffThread.cpp
 BUG: [ 1369856 ] Crashed when interface language is changed
  Src: DirDoc.cpp
 BUG: [ 1368755 ] Want comment on format line in 7ZCommon.cpp
  Cosmetic: adding explanatory comment to Merge7z::Proxy::operator->
  Src: 7zCommon.cpp

2005-11-30 Kimmo
 PATCH: [ 1369544 ] Catalan translation update
  Submitted by Jordi Vilar
  Docs/Users/Languages: ReadMe-Catalan.txt
  Src/Languages/Catalan: MergeCatalan.rc
 PATCH: [ 1265295 ] Swap file compare panes (use pointers for buffers)
  Forgot to update resource.h in language folders
  Src/Languages: resource.h

2005-11-30 Perry
 Cosmetic: add comment to DiffThread giving value of msgID variable
  (to help debugging).
  Src: DiffThread.cpp

2005-11-28 Perry
 BUG: [ 1368492 ] cvs ASSERT failing
 Fix reversion bug from Patch [ 1265295 ]

2005-11-28 Kimmo
 PATCH: [ 1265295 ] Swap file compare panes (use pointers for buffers)
  Submitted by Takashi Sawanaka
  Src: ChildFrm.cpp DiffList.cpp DiffList.h DirDoc.cpp EditorFilepathBar.cpp
   EditorFilepathBar.h LocationView.cpp LocationView.h MainFrm.cpp Merge.rc
   MergeDiffDetailView.cpp MergeDiffDetailView.h MergeDoc.cpp MergeDoc.h
   MergeDocLineDiffs.cpp MergeEditView.cpp MergeEditView.h PathContext.cpp
   PathContext.h resource.h
  Src/Languages: *.rc resource.h

2005-11-28 Perry
 PATCH: [ 1336598 ] Add extensions DisplayXMLFiles plugin
 Add several new extensions, bump version (1.0.2.0 -> 1.0.3.0)