@@ -1,3 +1,8 @@
+2005-12-04 Jochen
+ CMarkdown::FileImage::GuessByteOrder(): Fix UTF-8 signature detection
+ CMarkdown::GetTagName(): Strip bogus trailing slash in name of empty tag
+  Src: markdown.cpp
+
 2005-12-03 Perry
  PATCH: [ 1335128 ] Ignore uninstalled codepages
   Src: MergeDoc.cpp MergeDoc.h codepage.cpp codepage_detect.cpp
